# carousel-atom

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  DEPLOY.md  Dockerfile  HANDOFF.md  Makefile  README.md  Start Carousel Studio.command  dev.sh  railway.toml
backend/: pyproject.toml
backend/api/: auth.py  rate_limit.py  schemas.py  server.py  v1.py
backend/core/: caption_engine.py  copy.py  dedup.py  http.py  image.py  image_search.py  llm.py  log.py  pipeline.py  quality.py  scheduler.py  text.py  topic_loader.py  typography.py
backend/core/delivery/: __init__.py  telegram.py
backend/core/parsers/: __init__.py  base.py  html_scraper.py  newsapi.py  rss.py
backend/designs/: __init__.py  _newsflash_legacy.py  _viral_roundup_legacy.py  base.py  blueprint.py  newsflash.py  premium_light.py  quote_card.py  story_mode.py  tiktok_news.py  viral_roundup.py
backend/tests/: test_api_v1.py  test_copy.py  test_image.py  test_image_search.py  test_llm.py  test_news_icon.py  test_newsapi.py  test_punchy.py  test_quality.py  test_scheduler.py  test_text.py  test_typography.py
backend/topics/celebrity/: topic.yaml
backend/topics/crypto/: topic.yaml
backend/topics/f1/: topic.yaml
backend/topics/fitness/: topic.yaml
backend/topics/gaming/: topic.yaml
backend/topics/lifestyle/: topic.yaml
backend/topics/mlb/: topic.yaml
backend/topics/movies/: topic.yaml
backend/topics/music/: topic.yaml
backend/topics/nba/: topic.yaml
backend/topics/nfl/: topic.yaml
backend/topics/nhl/: topic.yaml
backend/topics/science/: topic.yaml
docs/: API.md
(+31 files in other folders)
